# MCTS

DISTRIBUTION/: MCTS.cpp  MCTS.h
MCTS-master/projet_MCTS/: Arene_light  CMakeCache.txt  CMakeLists.txt  MCTS.h  arbitre.cpp  arbre_mcts  jeu.h  main.cpp
MCTS-master/projet_MCTS/joueurs/: CMakeLists.txt  Makefile  cmake_install.cmake
mcts_avec_arene/: CMakeLists.txt  MCTS.h  arbitre.cpp  build.ninja  jeu.h
mcts_avec_arene/joueurs/: cmake_install.cmake  joueur_MCTS.cpp  joueur_MCTS.h
mcts_final_arene/: MCTS.cpp  Trainer.h  main.cpp
mcts_final_arene/joueurs/: joueur_MCTS.cpp  joueur_MCTS.h
mcts_incomplet/DISTRIBUTION/: CMakeLists.txt  MCTS.cpp  cmake_install.cmake  jeu.cpp
mcts_incomplet/DISTRIBUTION/joueurs/: joueur_MCTS.cpp
mcts_incomplet/mcts/: CMakeLists.txt  joueur_MCTS.cpp  joueur_MCTS.h  main.cc
projet_MCTS/: MCTS.cpp  MCTS.h  Makefile  cmake_install.cmake  jeu.cpp  jeu.h  main.cpp  projet.out
projet_MCTS/joueurs/: CMakeCache.txt  CMakeLists.txt  joueur.h  joueur_MCTS.cpp  joueur_MCTS.h
projet_celian_youssef/: expert_mcts.json
projet_celian_youssef/projet_final/: MCTS.cpp  jeu.cpp  main.cpp  plateau.h
projet_celian_youssef/projet_final/joueurs/: joueur_MCTS.cpp
projet_final/: MCTS.h  README.txt  Trainer.h  jeu.h
projet_final/joueurs/: CMakeLists.txt
